--- a/Readme
+++ b/Readme
@@ -1,31 +1,36 @@
 HI THERE,
-HI, my name is La’Kesha Bailey. I’m currently an Online student at Grand Canyon University, majoring in Sociology. I am passionate about making a meaningful impact in the Data Analyst field, while bringing a strong dedication to community well-being, combined with my background in public speaking and electrocardiogram technology.
+My name is La’Kesha Bailey. I’m currently an student at Grand Canyon University, majoring in Sociology. I am passionate about making a meaningful impact in the Data Analyst field.
+
 EDUCATION
  
-Education- Bachelor of Science in Sociology Grand Canyon University April 2027
-Temple College- AAS in Management 2008, Google Developer-Android Associate Developer 2021, Datacamp- Associate Data Analyst 2025
+•	Grand Canyon University-  Bachelor of Science in Sociology (April 2027)
+•	Temple College- AAS in Management 2008
+•	Google Developer-Android Associate Developer 2021
+•	Data camp- Associate Data Analyst 2025
+
 VOLUNTEERING
-Volunteering- Community Volunteer, *Volunteered with groups and organizations to help make measurable differences for program recipients.
+
+*Volunteered with groups and organizations to help make measurable differences for program recipients.
 *Helped with office tasks, taking messages, scanning documents and answering phones inquires.
 *Freed Full-Time Employees up for more critical work by completing clerical tasks.
-* Encouraged donations by supporting community fundraising events and campaigns*Volunteered with groups and organizations to help make measurable differences for program recipients. *Helped with office tasks, taking messages, scanning documents and answering phones inquires. *Freed Full-Time Employees up for more critical work by completing clerical tasks. * Encouraged donations by supporting community fundraising events and campaigns
+* Encouraged donations by supporting community fundraising events and campaigns
+*Volunteered with groups and organizations to help make measurable differences for program recipients.
+*Helped with office tasks, taking messages, scanning documents and answering phones inquires.
+*Freed Full-Time Employees up for more critical work by completing clerical tasks. 
+* Encouraged donations by supporting community fundraising events and campaigns
+
 SKILLS
-Skills – Data Analysis, SQL, Teamwork, Microsoft Power Bi, Presentation, Time Management, Collaborative problem solving
+
+•	Data Analysis
+•	 SQL
+•	 Teamwork
+•	Microsoft Power Bi
+•	Presentation
+•	Time Management
+•	Collaborative problem solving
 
 
 
 
 
-
-Hello, my name is La'Kesha Bailey. I'm currently an Online student at Grand Canyon University, majoring in Sociology. I am passionate about making a meaningful impact in the Data Analyst field, while bringing a strong dedication to community well-being, combined with my background in public speaking and electrocardiogram technology.
-
-Education- Bachelor of Science in Sociology Grand Canyon University April 2027
-Temple College- AAS in Management 2008, Google Developer-Andriod Associate Developer 2021, Datacamp- Associate Data Analyst 2025
-
-Volunteering- Community Volunteer, *Volunteered with groups and organizations to help make measurable differences for program recipients.
-*Helped with office tasks, taking messages, scanning documents and answering phones inquires.
-*Freed Full-Time Employees up for more critical work by completing clerical tasks.
-* Encouraged donations by supporting community fundraising events and campaigns*Volunteered with groups and organizations to help make measurable differences for program recipients. *Helped with office tasks, taking messages, scanning documents and answering phones inquires. *Freed Full-Time Employees up for more critical work by completing clerical tasks. * Encouraged donations by supporting community fundraising events and campaigns
-
-Skills - Data Analysis, SQL, Teamwork, Microsoft Power Bi, Presentation, Time Management, Collaborative problem solving
 
